--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "type_traits": "c",
         "test.h": "c",
-        "compiler_common.h": "c"
+        "compiler_common.h": "c",
+        "main.h": "c",
+        "wjcl_hash_map.h": "c"
     }
 }
